day2/app2-deployment.yml
# sample-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app2
  labels:
    app: web-app2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-app2
  template:
    metadata:
      labels:
        app: web-app2
    spec:
      containers:
      - name: k8s-demo
        image: arjunachari12/k8s-demo
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: web-app-service2
spec:
  selector:
    app: web-app2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
