day2/ingress-rules.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app-ingress
  annotations:
    kubernetes.io/ingress.class: "alb"
spec:
  rules:
    - host: webapp1.example.com
      http:
        paths:
          - path: /
            backend:
              service:
                name: web-app-service
                port:
                  number: 80
            pathType: Prefix
    - host: webapp2.example.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: web-app-service2
              port:
                number: 80
